--- a/TwitterDyor.ipynb
+++ b/TwitterDyor.ipynb
@@ -218,9 +218,40 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!pip install pycoingecko"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YRxQGEeWQVQ6",
+        "outputId": "d1796b71-4b6b-4ab3-b67e-d650e0ed5339"
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting pycoingecko\n",
+            "  Downloading pycoingecko-2.2.0-py3-none-any.whl (8.3 kB)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from pycoingecko) (2.23.0)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->pycoingecko) (1.24.3)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->pycoingecko) (2.10)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->pycoingecko) (2021.10.8)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->pycoingecko) (3.0.4)\n",
+            "Installing collected packages: pycoingecko\n",
+            "Successfully installed pycoingecko-2.2.0\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "Notre objectif initial est de récupérer les informations données par @DYORCryptoBot. Ce bot sur twitter est un bot non-open source qui s'appuie (selon sa doc) sur ses propres indicateurs techniques et de tendance pour proposer 5 tokens bullish et 5 tokens en tendance renversement bullish (etaient bearish, ont un potentiel bullish). Nous partons de l'hypothèse que ces résultats sont cohérents et nous verrons plus tard comment nous allons confirmer ou infirmer ces tendances. Nous avons délibérement fait le choix de ne pas faire notre propre analyse de tous les tokens listés sur une plateforme étant donné que l'api de twitter accepte un nombre de requêtes limitées tout comme binance. On a donc dans ce cas un problème : \n",
+        "Notre objectif initial est de récupérer les informations données par @DYORCryptoBot. Ce bot sur twitter est un bot non-open source qui s'appuie (selon sa doc) sur ses propres indicateurs techniques et de tendance pour proposer 5 tokens bullish et 5 tokens en tendance renversement bullish (etaient bearish, ont un potentiel bullish) toutes les 15 minutes. Nous partons de l'hypothèse que ces résultats sont cohérents et nous verrons plus tard comment nous allons confirmer ou infirmer ces tendances. Nous avons délibérement fait le choix de ne pas faire notre propre analyse de tous les tokens listés sur une plateforme étant donné que l'api de twitter accepte un nombre de requêtes limitées tout comme binance. On a donc dans ce cas un problème : \n",
         "1. de nombre de requêtes trop multiples\n",
         "2. de traitement d'un trop grand nombre de données donc d'une attente trop longue pour obtenir des résultats et \"timer\" notre trading sur les coins en question.\n",
         "\n",
@@ -1024,9 +1055,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "On en profite pour faire un cas d'étude de ces différentes cryptos depuis leur existence en résumant l'appréciation du token dans un graphique. On remarque sans en faire l'utilisation que la majorité des tokens ont eu une belle appréciation dans l'ensemble malgré des retracements fréquents."
+      ],
+      "metadata": {
+        "id": "8dYIYRLoQayM"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "!pip install pycoingecko\n",
+        "\n",
         "from pycoingecko import CoinGeckoAPI\n",
         "\n",
         "    \n",
@@ -1759,7 +1799,7 @@
         },
         "outputId": "8c6aa88d-a2cf-4044-f8ed-e4beff7a8e9a"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1778,6 +1818,15 @@
       ],
       "metadata": {
         "id": "uCs3XtCNPP_Q"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "On peut maintenant renseigner l'ensemble des informations (le token à acheter et le nombre d'assets de ce token à acheter) dont on avait besoin pour faire fonctionner notre bot de trading sur binance dans un fichier csv."
+      ],
+      "metadata": {
+        "id": "q5KvMJfxRFOD"
       }
     },
     {
@@ -1815,7 +1864,7 @@
         "#print(len(token))\n",
         "#print(len(position))\n",
         "#print(len(quantite))\n",
-        "for w in range(10):\n",
+        "for w in range(len(token)):\n",
         "  \n",
         "  writer.writerow([token[w], position[w],round(quantite[w], 3)]) #on remplit direct le doc\n",
         "\n",
@@ -1826,132 +1875,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZDsKT-z-MDZ4",
-        "outputId": "ddf76305-f71a-415c-c1aa-f0fc51f887a6"
+        "outputId": "29cc3cb8-d53d-4d76-8555-1b9327b1fca9"
       },
-      "execution_count": null,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[0.5279831, 8.19672131, 193.21431332, 0.47169811, 64.16796607, 65.66246865, 27.19774803, 4.80769231, 7.72200772, 2.85306705]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "import requests\n",
-        "import json\n",
-        "def retour_nb_assets_achat():\n",
-        "\n",
-        "  liste_prix_assets = []\n",
-        "  for o in range(9):\n",
-        "    \n",
-        "    montoken = str(results[o]) #on va chercher notre token\n",
-        "    #print(montoken)\n",
-        "\n",
-        "    if(montoken == 'GXS'):\n",
-        "      montoken = \"BTC\"\n",
-        "\n",
-        "    base_url = \"https://api.coingecko.com/api/v3\"\n",
-        "    url = base_url + \"/coins/list\"\n",
-        "\n",
-        "    r = requests.get(url, headers ={\"accept\":\"application/json\"})\n",
-        "    \n",
-        "\n",
-        "    \n",
-        "\n",
-        "    identifiers = r.json()\n",
-        "    symbol_id_map = {d[\"symbol\"]:d[\"id\"] for d in identifiers}\n",
-        "    symbols = [montoken]\n",
-        "    ids = [symbol_id_map[symbol.lower()] for symbol in symbols] #j'ai des ptn d'erreurs pour certains tokens wtf j'en pu\n",
-        "    ids = \",\".join(ids)\n",
-        "    url = base_url + f\"/simple/price?ids={ids}&vs_currencies=usd\"\n",
-        "    r = requests.get(url)\n",
-        "    #print(r.json())\n",
-        "    #print(r.json()[ids]['usd']) #on affiche sa valeur \n",
-        "    liste_prix_assets.append(r.json()[ids]['usd'])\n",
-        "\n",
-        "  print(liste_prix_assets)\n",
-        "  nb_assets_achat = []\n",
-        "  for d in range(10):\n",
-        "    nb_assets_achat.append(20/liste_prix_assets[d]) #on allocate 20 usd pour chacun des 10 tokens\n",
-        "\n",
-        "  print(nb_assets_achat)\n",
-        "  return(nb_assets_achat)\n",
-        "\n",
-        "retour_nb_assets_achat()\n",
-        "\n",
-        "\n",
-        "  \n",
-        "quantite_calculee = []\n",
-        "quantite_calculee = retour_nb_assets_achat()\n",
-        "print(quantite_calculee)\n",
-        "\n",
-        "file = open(\"position.txt\", \"w\")\n",
-        "writer = csv.writer(file)\n",
-        "\n",
-        "\n",
-        "token = []\n",
-        "usdtpair = \"USDT\"\n",
-        "lastlistedtokens = results[:19] #nos 20 derniers resultats ouai on prend du large\n",
-        "for x in range(len(lastlistedtokens)):\n",
-        "  token.append(lastlistedtokens[x] + 'USDT') #on cree la paire qui doit etre respectee\n",
-        "\n",
-        "position = [0,0,0,0,0,0,0,0,0,0]\n",
-        "quantite = quantite_calculee\n",
-        "\n",
-        "\n",
-        "colonne3 = ['quantity']\n",
-        "colonne2 = ['position']\n",
-        "colonne1 = ['Currency']\n",
-        "for w in range(1):\n",
-        "  writer.writerow([colonne1[w], colonne2[w],colonne3[w]])\n",
-        "  #writer.writerow(['Currency'],['position'],['quantity'])\n",
-        "\n",
-        "\n",
-        "for w in range(10):\n",
-        "\n",
-        "\n",
-        "  writer.writerow([token[w], position[w],quantite[w]]) #on remplit direct le doc\n",
-        "\n",
-        "file.close()\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 450
-        },
-        "id": "rntXJ2K6lSYz",
-        "outputId": "b592f4ce-7960-4033-909b-be8b17918e29"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1306.0, 42814, 1.29e-10, 39.48, 335.89, 23.97, 520.37, 10.53, 314.05]\n",
-            "[0.015313935681470138, 0.00046713691783061614, 155038759689.9225, 0.5065856129685917, 0.05954330286701003, 0.8343763037129746, 0.03843419105636374, 1.8993352326685662, 0.06368412673141219]\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "JSONDecodeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-161-1278ea1e78aa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0mquantite_calculee\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 47\u001b[0;31m \u001b[0mquantite_calculee\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mretour_nb_assets_achat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     48\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquantite_calculee\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-161-1278ea1e78aa>\u001b[0m in \u001b[0;36mretour_nb_assets_achat\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0midentifiers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m     \u001b[0msymbol_id_map\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"symbol\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"id\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[0;32min\u001b[0m \u001b[0midentifiers\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0msymbols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mmontoken\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/requests/models.py\u001b[0m in \u001b[0;36mjson\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    896\u001b[0m                     \u001b[0;31m# used.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    897\u001b[0m                     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 898\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mcomplexjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    899\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    900\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/lib/python3.7/json/__init__.py\u001b[0m in \u001b[0;36mloads\u001b[0;34m(s, encoding, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    346\u001b[0m             \u001b[0mparse_int\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mparse_float\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    347\u001b[0m             parse_constant is None and object_pairs_hook is None and not kw):\n\u001b[0;32m--> 348\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_default_decoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    349\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcls\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    350\u001b[0m         \u001b[0mcls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mJSONDecoder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/lib/python3.7/json/decoder.py\u001b[0m in \u001b[0;36mdecode\u001b[0;34m(self, s, _w)\u001b[0m\n\u001b[1;32m    335\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    336\u001b[0m         \"\"\"\n\u001b[0;32m--> 337\u001b[0;31m         \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraw_decode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_w\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    338\u001b[0m         \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_w\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    339\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/lib/python3.7/json/decoder.py\u001b[0m in \u001b[0;36mraw_decode\u001b[0;34m(self, s, idx)\u001b[0m\n\u001b[1;32m    353\u001b[0m             \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscan_once\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    354\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 355\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mJSONDecodeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Expecting value\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    356\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
+            "[1.42940327, 6.69322709, 103.82910813, 1.15675924, 86.7025893, 53.07450666, 5.40515706, 18.23899371, 11.18881119, 0.57687355]\n"
           ]
         }
       ]
@@ -1959,59 +1891,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Export fichier csv"
-      ],
-      "metadata": {
-        "id": "_Da1pOEhWoeW"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def create_file_csv():\n",
-        "  \n",
-        "  quantite_calculee = []\n",
-        "  quantite_calculee = retour_nb_assets_achat()\n",
-        "  print(quantite_calculee)\n",
-        "\n",
-        "  file = open(\"position.csv\", \"w\")\n",
-        "  writer = csv.writer(file)\n",
-        "\n",
-        "  \n",
-        "  token = []\n",
-        "  usdtpair = \"USDT\"\n",
-        "  lastlistedtokens = results[:19] #nos 20 derniers resultats ouai on prend du large\n",
-        "  for x in range(len(lastlistedtokens)):\n",
-        "    token.append(lastlistedtokens[x] + 'USDT') #on cree la paire qui doit etre respectee\n",
-        "\n",
-        "  position = [0,0,0,0,0,0,0,0,0,0]\n",
-        "  quantite = quantite_calculee\n",
-        "\n",
-        "\n",
-        "  colonne3 = ['quantity']\n",
-        "  colonne2 = ['position']\n",
-        "  colonne1 = ['Currency']\n",
-        "  for w in range(1):\n",
-        "    writer.writerow([colonne1[w], colonne2[w],colonne3[w]])\n",
-        "    #writer.writerow(['Currency'],['position'],['quantity'])\n",
-        "\n",
-        "  for w in range(9):\n",
-        "\n",
-        "\n",
-        "    writer.writerow([token[w], position[w],quantite[w]]) #on remplit direct le doc\n",
-        "\n",
-        "  file.close()"
-      ],
-      "metadata": {
-        "id": "ZMQmgnZnWncI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Implementation BINANCE BOT"
+        "On peut maintenant passer à l'implémentation de notre bot binance qui nous permettra de market buy et market sell les tokens souhaités automatiquement. \n",
+        "Pour ce faire, nous devons créer une API Binance, vous pouvez vous créer un compte et une API dans Profil->Gestion API et modifier les restrictions en cliquant sur \"Activer le trading au comptant et sur marge\". Attention, ces clés sont privées, ne les partagez à personne."
       ],
       "metadata": {
         "id": "HL15yBRTeV_X"
@@ -2237,6 +2118,15 @@
           "execution_count": 94
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "On a affiché notre fichier avec la bibliotheque panda. Vous remarquez que l'on utilise une colonne position. Elle sert en cas de récurrence d'un token. Le 0 devient un 1 si l'on a market buy la paire à l'aide de la fonction ci-dessous."
+      ],
+      "metadata": {
+        "id": "nMrJ3iFkTrm9"
+      }
     },
     {
       "cell_type": "code",
